# api/controllers/analyzer_controller.py
@@ -1,16 +1,18 @@
 from typing import Dict
 
-import connexion
-import six
+from connexion import NoContent
+from flask import current_app
 
-from api import util
+from common.amqp_publisher import AMQPPublisher
 
 
-def start_traffic_analyzer(body: Dict):  # noqa: E501
+def start_traffic_analyzer(start_request: Dict):  # noqa: E501
+    """Start traffic analyzer
+    :rtype: int
     """
-    Start traffic analyzer
-    """
-    return 'do some magic!'
+    publisher: AMQPPublisher = current_app.amqp_publisher
+    publisher.publish('listener', 'action', start_request)
+    return NoContent, 204
 
 
 def stop_traffic_analyzer():  # noqa: E501
@@ -21,4 +23,6 @@ def stop_traffic_analyzer():  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    publisher: AMQPPublisher = current_app.amqp_publisher
+    publisher.publish('listener', 'action', {'action': 'stop'})
+    return 204
